# advanced-knowledge-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  BENEFITS.md  CLAUDE_INTEGRATION.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_STATUS.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  security.yml  test.yml
dev-utils/: check_db.py  sse_server.py  sse_server_local.py  test_array_fix.py  test_complete_array_fix.py  test_knowledge_graph.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sql  knowledge-mcp.service
docs/: BUGFIX_2025-12-08.md  DOCUMENT_INGESTION_GUIDE.md  INTEGRATION_TEST_EXAMPLE.md  KB_OB1_INTEGRATION_SUMMARY.md  PM_INSTRUCTIONS.md  POST_RESTART_COMMANDS.md
docs/plans/: 2026-03-30-pm-decision-making-framework.md
docs/research/: decision-making-frameworks-assumption-prevention-2025-03-30.md  knowledge-graph-implementation-plan.md  knowledge-graph-structure-2025-03-29.md
examples/: basic_usage.py  claude_config.json  usage_examples.py
examples/environment_examples/: .env.json  .env.postgresql  .env.supabase
migrations/: 001_initial_schema.sql  002_kb_doc_sync.sql
scripts/: install.sh  setup-dev.sh  setup-postgres.sh  validate_pm_kb_integration.py
scripts/migration/: apply_migration.py  create_compatibility_views.sql  create_local_schema.sql  manual_migration.py  rename_columns.sql
src/knowledge_mcp/: __init__.py  db_client.py  doc_processor.py  env_config.py  mcp_http_wrapper_sse.py  mcp_index_scanner.py  response.py  server.py  server.py.backup-verbose  server.py.json_backup
tests/: conftest.py  manual_test_auto_reindex.py  test_basic.py  test_docker_mcp_indexing.py  test_mcp_index_auto_reindex.py
